# RoCo-Team-Builder

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  exa_query.json  exa_query2.json  idea.md  pyproject.toml  属性克制&性格.md
.anws/: install-lock.json
.anws/changelog/: v2.1.2.md
.anws/v1/: 00_MANIFEST.md  01_PRD.md  02_ARCHITECTURE_OVERVIEW.md  06_CHANGELOG.md  concept_model.json
.anws/v2/: 00_MANIFEST.md  01_PRD.md  02_ARCHITECTURE_OVERVIEW.md  05_TASKS.md  06_CHANGELOG.md  07_CHALLENGE_REPORT.md  COLD_START_DRILL_RECORD.md  INT_S1_VERIFICATION_REPORT.md  INT_S2_VERIFICATION_REPORT.md  INT_S3_VERIFICATION_REPORT.md  INT_S4_VERIFICATION_REPORT.md  RELEASE_CHECKLIST.md  concept_model.json
.anws/v3/: 05_TASKS.md  INT_S1_VERIFICATION_REPORT.md  INT_S2_VERIFICATION_REPORT.md
.claude/: settings.local.json
.claude/commands/: design-system.md  forge.md
.tmp/: acceptance_architecture_review_2026-04-16.md  static_code_review_report.md
.windsurf/workflows/: challenge.md  change.md  genesis.md
src/agent_backend/: Dockerfile  __init__.py  main.py  requirements.txt
src/data-layer/: __init__.py
src/spirit_card/: __init__.py
src/web-ui-shell/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
tests/: conftest.py
tests/e2e/: product-shell.spec.ts  visible-feature-policy.spec.ts
tests/integration/: test_agent_backend_routes.py  test_card_contract_degradation.py  test_chat_completions_runtime.py  test_handoff_artifact_session_scope.py  test_runtime_card_integration.py  test_spirit_repository.py  (+9 more)
(+144 files in other folders)
