[project]
name = "roco-team-builder"
version = "0.1.0"
description = "洛克王国世界配队 Agent (RoCo Team Builder)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "cachetools>=5.3.0",
    "rapidfuzz>=3.6.0",
    "jinja2>=3.1.0",
    "openai-agents>=0.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
